[package]
name = "mntrs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dyrnq/mntrs"
description = "Mount remote storage (S3, HDFS, GCS, etc.) to local directory via FUSE"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
libc = "0.2"
futures = "0.3"
once_cell = "1"
rustix = { version = "1.1.4", features = ["process", "pipe", "fs", "stdio", "event"] }
dashmap = "6.2.1"
bytes = "1.11.1"
unicode-normalization = "0.1.25"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
opendal = { version = "0.57", features = ["services-s3", "services-gcs", "services-azblob", "services-hdfs-native", "services-webhdfs", "services-oss", "services-cos", "services-obs", "services-b2", "services-vercel-blob", "services-aliyun-drive", "services-fs", "services-memory", "services-webdav"] }



[target.'cfg(unix)'.dependencies]
fuser = "0.17"

[target.'cfg(windows)'.dependencies]
winfsp = { version = "0.13", features = ["async-io"] }
winfsp-sys = "0.12"
windows = { version = "0.61", features = ["Win32_Foundation"] }
widestring = "1"

[features]
default = []
hdfs-jni = ["opendal/services-hdfs"]

[workspace]
members = [".", "csi/mntrs-csi"]

[[bin]]
name = "mntrs"
path = "src/main.rs"
