[package]
name = "mntrs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dyrnq/mntrs"
description = "Mount remote storage (S3, HDFS, GCS, etc.) to local directory via FUSE"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.52", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["time"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5"
libc = "0.2.186"
futures = "0.3.32"
once_cell = "1.21"
rustix = { version = "1.1.4", features = ["process", "pipe", "fs", "stdio", "event"] }
dashmap = "6.2.1"
moka = { version = "0.12.15", features = ["sync"] }
bytes = "1.12"
unicode-normalization = "0.1.25"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "hickory-dns"] }
opendal = { version = "0.57", features = ["services-s3", "services-gcs", "services-azblob", "services-hdfs-native", "services-webhdfs", "services-oss", "services-cos", "services-obs", "services-b2", "services-vercel-blob", "services-aliyun-drive", "services-fs", "services-memory", "services-webdav", "layers-capability-check"] }
# Hardware-accelerated CRC32C (x86 CRC32Q via SSE4.2; ARMv8.2-CRC32).
# Used for disk cache block integrity checks; falls back to a
# software implementation on CPUs without the corresponding ISA
# extensions. ~5-10× faster than the hand-rolled poly loop in
# `crc32c_checksum` for 8 MiB blocks.
crc32c = "0.6.8"
# Lock-free MPMC channel for the disk-cache write thread pool.
# `crossbeam-channel` was already in the dep graph via tokio;
# pinning a direct version so we can break the dependency if
# tokio ever drops it. Used by `src/disk_write_pool.rs` to
# route FUSE-worker `write()` calls to the IO thread pool
# without the per-write `std::thread::spawn` cost (~10 µs).
crossbeam-channel = "0.5.15"
# LZ4 frame-less block compression for disk-cache files
# (#4 in DESIGN_VULNS / cache audit). Used by the new
# block-cache format v2 — full 8 MiB blocks compress at
# ~1 GiB/s/core with typical 2-3× ratio on JSON/text/log/
# parquet, ~1× on already-compressed media. CPU cost is
# 5-10 % on hot writes/reads; disk savings (and disk-I/O
# bandwidth savings on disk-bound workloads) are the win.
# `lz4_flex` (vs the `lz4` C-binding crate) is pure Rust,
# no system lz4.so dep, and has comparable perf for our
# block sizes.
lz4_flex = "0.14"
foyer-memory = "0.22.3"



[target.'cfg(unix)'.dependencies]
fuser = "0.17"

[target.'cfg(windows)'.dependencies]
winfsp = { version = "0.13", features = ["async-io", "notify"] }
winfsp-sys = "0.12.1"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
widestring = "1.2"

[features]
default = []
hdfs-jni = ["opendal/services-hdfs"]
# SFTP backend. The openssh crate (used by opendal-service-sftp) doesn't
# compile on Windows — gate it behind an opt-in feature so default builds
# (incl. CI Windows job) don't pull it in.
sftp = ["opendal/services-sftp"]

[workspace]
members = [".", "csi/mntrs-csi"]

[patch.crates-io]
# Fork of hdfs-native 0.13.5 adding `dfs.client.use.datanode.hostname` support,
# so the client connects to DataNodes via host_name (k8s Service DNS) instead of
# ip_addr (127.0.0.1 in-container loopback). Original upstream issue:
# Kimahriman/hdfs-native#302.
#
# Upstream has since implemented the SAME feature (PR #303, merge commit
# e339b560, 2026-06-23) — equivalent constants/method/default. It is on master
# but NOT yet in a release: v0.14.0 (2026-06-04) predates it, and no v0.14.1+
# tag exists as of 2026-06-24. So this fork is kept temporarily (option C).
#
# TODO: revert to the crates.io version (delete this [patch.crates-io] block)
# once BOTH are published:
#   1. hdfs-native releases a version >= 0.14.1 containing #303, AND
#   2. opendal upgrades its opendal-service-hdfs-native dep to pull that version.
# At that point the dyrnq/hdfs-native fork can be archived. See
# [[hdfs-native-fork-temporary]].
hdfs-native = { git = "https://github.com/dyrnq/hdfs-native.git", rev = "419cd0ea737289232f1b35e2680313d814bf90aa" }

[[bin]]
name = "mntrs"
path = "src/main.rs"

# Platform-organized integration tests. Cargo does NOT auto-discover
# nested `tests/<dir>/*.rs` files (verified empirically on rustc 1.96.0);
# each test target needs an explicit `[[test]]` entry with a unique
# `name`. The file path under `tests/{csi,platform/<os>}/` advertises
# which subsystem / OS the test targets — primary signal is the path,
# the `#![cfg]` header inside each file is defense-in-depth.
#
# Layout:
#   tests/csi/                       — CSI tests. CSI is Linux-only
#                                      at the design level (the
#                                      `csi/mntrs-csi` sub-crate is
#                                      `cfg(not(windows))`-gated at
#                                      the dep level), so the files
#                                      are gated with
#                                      `#![cfg(target_os = "linux")]`
#                                      at the top of each.
#   tests/platform/linux/*.rs        — Other Linux-only tests.
#   tests/platform/windows/*.rs      — Windows-specific tests.
[[test]]
name = "csi_integration_test"
path = "tests/csi/csi_integration_test.rs"

[[test]]
name = "csi_mount_internal_test"
path = "tests/csi/csi_mount_internal_test.rs"

[[test]]
name = "csi_full_integration_test"
path = "tests/csi/csi_full_integration_test.rs"

[[test]]
name = "platform_linux_fuse_integration_test"
path = "tests/platform/linux/fuse_integration_test.rs"

[[test]]
name = "platform_windows_winfsp_integration_test"
path = "tests/platform/windows/winfsp_integration_test.rs"

# Dev-deps for platform tests. `ctor` runs a `#[ctor]` static before
# each test (lets us init a tracing subscriber so RUST_LOG works in
# the test binary, which otherwise has no main). `tracing-subscriber`
# is already a regular dep, but listed here too so test-only filter
# logic compiles even if the main dep ever moves behind a feature.
[dev-dependencies]
ctor = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"

