[package]
name = "mntrs-csi"
version = "0.1.0"
edition = "2021"
description = "Kubernetes CSI driver for mntrs — mount S3/cloud storage as PVCs"

[dependencies]
[target.'cfg(not(windows))'.dependencies]
mntrs = { path = "../.." }
anyhow = "1"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tracing = "0.1"
tokio-util = "0.7"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opendal = { version = "0.57", features = ["services-s3"] }
tower = "0.5.3"
# rustix gives a safe statvfs wrapper for
# node_get_volume_stats (Bug 14). statvfs on the
# mountpoint routes through FUSE into MntrsFs::statfs,
# which is the right source of truth for the CSI
# response — vs the pre-fix std::fs::metadata().len(),
# which returned the mountpoint directory inode size
# (4 KiB).
rustix = { version = "1.1.4", features = ["fs"] }

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[[bin]]
name = "mntrs-csi"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27.0"
